examples/assignment2/type-error/8.j
/* Test the following:
 *  - type error when println has non Int/Bool/String type.
 **/

class Another_Main {
    Void main(Void void_fml, String sTR) {
        Surface sur;

        println(sur);
    }

}

class Surface {
    Bool needToTransform;
    Void transform() {
        while (((((!needToTransform))))) {
            return;
        }
    }

    Surface contain(Void nothing) {
        return this;
    }
}
